minor: Modified about section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p>I'm a passionate Open-Source engineer who enjoys troubleshooting systems from Linux clusters to vintage motorcycles and sailboats.  I am currently an engineer on the <a href="http://liquidgalaxy.endpoint.com">Liquid Galaxy</a> project - a Google initiated virtual immursive reality platform.</p>  
+                <p>I'm a passionate Open-Source engineer who enjoys troubleshooting systems from Linux clusters to vintage motorcycles and sailboats.  I am currently an engineer on the <a href="http://liquidgalaxy.endpoint.com">Liquid Galaxy</a> project - a Google initiated distributed immersive VR platform.</p>  
                 <p>Otherwise, you'll find me riding and tuning a <a href="http://www.xs650.com/">'79 XS650</a> and refitting a masthead ketch.</p>
             </div>
         </div>
