--- a/index.html
+++ b/index.html
@@ -156,20 +156,7 @@
                             <strong>Thank You !</strong> Your email has been delivered.
                         </div>
                     </div>
-
-                </div><!-- End Contact Form Area -->
-
-                <ul class="list-inline banner-social-buttons">
-                    <!--<li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>-->
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <!--<li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>-->
-                </ul>
+                </div>
             </div>
         </div>
     </section>
@@ -180,7 +167,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2017</p>
+            <p>Copyright &copy;  2017</p>
         </div>
     </footer>
 
