Fixed github-chart asthetics

--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link href="css/grayscale.css" rel="stylesheet">
 
     <!-- Basic Contact CSS -->
-    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">-->
     <link href="css/contact.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+    [if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    [endif]
 
 </head>
 
@@ -107,9 +105,37 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Dev</h2>
-                    <p>Visit me on Github</p>
+                    <div class="row">
+                        <p>Visit me on Github</p>
+                    </div>
+                    <div class="github-chart">
+                        <img src="http://ghchart.rshah.org/b-berry" alt="b-berry's Github chart" />
+                    </div>
+                    </br>
                     <a href="http://github.com/b-berry" class="btn btn-default btn-lg">Github Page</a>
                 </div>
+            <!--</div>-->
+                <!-- Prepare a container for your calendar. -->
+                <script
+                  src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
+                </script>
+
+                <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+                <link
+                  rel="stylesheet"
+                  href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"
+                />
+
+                <!-- Prepare a container for your calendar. -->
+                <div> <!-- class="calendar">-->
+                    <!-- Loading stuff -->
+                    Loading the data just for you.
+                </div>
+
+                <script>
+                    new GitHubCalendar(".calendar", "b-berry");
+                </script>
+
             </div>
         </div>
     </section>
@@ -167,7 +193,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy;  2017</p>
+            <p>Copyright &copy; 2017</p>
         </div>
     </footer>
 
@@ -181,10 +207,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>-->
 
     <!-- Theme JavaScript -->
-    <script src="js/grayscale.min.js"></script>
+    <!--<script src="js/grayscale.js"></script>-->
 
 </body>
 
