--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
     <!-- Basic Contact CSS -->
     <link href="css/contact.css" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    [if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    [endif]
-
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -93,8 +87,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p>I'm a passionate Open-Source engineer who enjoys troubleshooting systems from Linux clusters to vintage motorcycles and sailboats.  I am currently an engineer on the <a href="http://liquidgalaxy.endpoint.com" target="_blank">Liquid Galaxy</a> project - a Google initiated distributed immersive VR platform.</p>  
-                <p>Otherwise, you'll find me riding and tuning a <a href="http://www.xs650.com/" target="_blank">'79 XS650</a> and refitting a masthead ketch.</p>
+                <p>I'm a passionate Open-Source engineer who enjoys troubleshooting systems from Linux clusters to vintage motorcycles and sailboats.  Born in the 'Discover the Spirit' lands of North Dakota and self-taught Linux administration on Fedora systems while a student at the University of Minnesota's Department of Mathematics, I've since migrated to New York City to start a career in Linux Engineering and I am currently a DevOps and Support Engineer for Debian based clusters on the <a href="http://liquidgalaxy.endpoint.com" target="_blank">Liquid Galaxy</a> project - a Google initiated distributed immersive VR platform.</p>
+                <p>I've been 100% remote for the last two years of my tenure on this project and while not coding, you'll find me riding old motorcycles, and sailboats.</p>
+                <!--<p>Otherwise, you'll find me riding and tuning a <a href="http://www.xs650.com/" target="_blank">'79 XS650</a> and refitting a masthead ketch.</p>-->
             </div>
         </div>
     </section>
