--- a/index.html
+++ b/index.html
@@ -11,18 +11,11 @@
 
     <title>Bryan Berry - Github Pages</title>
 
-    <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-
-    <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
-
-    <!-- Basic Contact CSS -->
     <link href="css/contact.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -67,7 +60,6 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
             <div class="container">
@@ -85,7 +77,6 @@
         </div>
     </header>
 
-    <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -97,7 +88,6 @@
         </div>
     </section>
 
-    <!-- Download Section -->
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
@@ -112,13 +102,11 @@
                     </br>
                     <a href="http://github.com/b-berry" class="btn btn-default btn-lg">Github Page</a>
                 </div>
-            <!--</div>-->
+
                 <!-- Prepare a container for your calendar. -->
                 <script
                   src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
                 </script>
-
-                <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
                 <link
                   rel="stylesheet"
                   href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"
@@ -146,36 +134,24 @@
                 <p>Feel free to submit a brief introduction and I will try to get back to you promptly.</p>
                 <!--<p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a></p>-->
 
-                <!-- Form Area -->
                 <div class="contact-form">
                     <!-- Form -->
                     <form id="contact-us" method="post" action="#">
-                        <!-- Left Inputs -->
                         <div class="col-xs-6 wow animated slideInLeft" data-wow-delay=".5s">
-                            <!-- Name -->
                             <input type="text" name="name" id="name" required="required" class="form" placeholder="Name" />
-                            <!-- Email -->
                             <input type="email" name="mail" id="mail" required="required" class="form" placeholder="Email" />
-                            <!-- Subject -->
                             <input type="text" name="subject" id="subject" required="required" class="form" placeholder="Subject" />
-                        </div><!-- End Left Inputs -->
-                        <!-- Right Inputs -->
+                        </div>
                         <div class="col-xs-6 wow animated slideInRight" data-wow-delay=".5s">
-                            <!-- Message -->
                             <textarea name="message" id="message" class="form textarea"  placeholder="Message"></textarea>
                         </div><!-- End Right Inputs -->
-                        <!-- Bottom Submit -->
                         <div class="relative fullwidth col-xs-12">
-                            <!-- Send Button -->
                             <button type="submit" id="submit" name="submit" class="form-btn semibold">Send Message</button> 
-                        </div><!-- End Bottom Submit -->
-                        <!-- Clear -->
+                        </div>
                         <div class="clear"></div>
                     </form>
 
-                    <!-- Your Mail Message -->
                     <div class="mail-message-area">
-                        <!-- Message -->
                         <div class="alert gray-bg mail-message not-visible-message">
                             <strong>Thank You!</strong> Your email has been delivered.
                         </div>
@@ -185,33 +161,21 @@
         </div>
     </section>
 
-    <!-- Map Section -->
     <section id="map" class="container content-section text-center">
     <div id="map"></div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="container text-center">
             <p>Copyright &copy; 2017</p>
         </div>
     </footer>
 
-    <!-- jQuery -->
     <script src="vendor/jquery/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>-->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMpGCnOVJZop0zdqDZI5qwgsOVik47J8Y&callback=initMap"></script>
-
-    <!-- Theme JavaScript -->
     <script src="js/grayscale.js"></script>
-</body>
 
+</body>
 </html>
