index: Formatted sub-title

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Bryan Berry</h1>
-                        <p class="intro-text">Free spirit, Linux Engineer
+                        <p class="intro-text">Free-spirit, Linux Engineer
                             <br>Open-Source Systems Advocate, Musician, Sailor, and Rider</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
